--- a/.github/workflows/reminders.yml
+++ b/.github/workflows/reminders.yml
@@ -6,15 +6,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-calendar:
+  ntfy-notification:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with: { node-version: 20 }
-      - run: npm install googleapis@105 node-fetch@3
-      - name: Crear/Actualizar recordatorios en Google Calendar
-        env:
-          GOOGLE_CALENDAR_CREDENTIALS: ${{ secrets.GOOGLE_CALENDAR_CREDENTIALS }}
-          CALENDAR_ID: "primary"
-        run: node .github/scripts/updateCalendar.js
+      - name: Enviar notificaciones Ntfy
+        run: node .github/scripts/sendNtfy.js
